--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,10 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  flutter:
+    sdk: flutter
+
+  #provider: ^6.0.0
   # path: ^1.8.0
 
 dev_dependencies:
