--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   
-  flutter_custom_dropdown:
+  flutter_custom_dropdown_list:
    path: ../
 
   # The following adds the Cupertino Icons font to your application.
